# 3dti-static-positions-file-output-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
